@@ -234,6 +234,10 @@ set none, one, several, or all options. The available options are as follows:
     
     \item{\code{messages.height}}{The height of the messages window, in lines. The default is 3.} 
     
+    \item{\code{minimum.width}}{The minimum width, in pixels, for the main R Commander windows; the default is \code{1000}.}
+    
+      \item{\code{minimum.height}}{The minimum height, in pixels, for the main R Commander windows; the default is \code{400}.}
+    
     \item{\code{multiple.select.mode}}{Affects the way multiple variables are selected in variable-list boxes.
     If set to \code{"extended"} (the default), left-clicking on a variable selects it and deselects any other
     variables that are selected; Control-left-click toggles
